# framegen

./: create-dataset-from-vid.py  cvae.py  play-sequential.py  play.py  pyproject.toml  readme.md  requirements.pip  scale-vid.sh  train-nfp.py  train.py  utils.py  vae.py
