[tool.poetry]
name = "porngen"
version = "0.1.0"
description = ""
authors = ["Felix Niemeyer <niemeyer.felix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
tensorflow = "^2.4.0"
keras-util = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
